force-app/main/default/objects/Executive__c/Executive__c.object-meta.xml
<CustomObject>
    <label>Executive</label>
    <nameField>
        <label>Executive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>