force-app/main/default/objects/Executive__c/fields/ABM_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ABM_Mobile__c</fullName>
    <label>ABM Mobile</label>
    <type>Phone</type>
</CustomField>