force-app/main/default/objects/Executive__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Executives</relationshipLabel>
    <relationshipName>Executives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>