force-app/main/default/objects/Executive__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRE</fullName>
                <label>usedcar</label>
            </value>
            <value>
                <fullName>BDM</fullName>
                <label>dmt</label>
            </value>
            <value>
                <fullName>BSO</fullName>
                <label>3w</label>
            </value>
            <value>
                <fullName>BCV</fullName>
                <label>cv</label>
            </value>
            <value>
                <fullName>BAU</fullName>
                <label>mahindra-newcar</label>
            </value>
            <value>
                <fullName>BLM</fullName>
                <label>newcar</label>
            </value>
            <value>
                <fullName>BFE</fullName>
                <label>tractor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>