force-app/main/default/objects/Executive__c/fields/CH_Mobile__c.field-meta.xml
<CustomField>
    <fullName>CH_Mobile__c</fullName>
    <label>CH Mobile</label>
    <type>Phone</type>
</CustomField>