force-app/main/default/objects/Executive__c/fields/DM_Mobile__c.field-meta.xml
<CustomField>
    <fullName>DM_Mobile__c</fullName>
    <label>DM Mobile</label>
    <type>Phone</type>
</CustomField>