force-app/main/default/objects/Executive__c/fields/Executive_Code__c.field-meta.xml
<CustomField>
    <fullName>Executive_Code__c</fullName>
    <externalId>true</externalId>
    <label>Executive Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>