force-app/main/default/objects/Executive__c/fields/Executive_Id__c.field-meta.xml
<CustomField>
    <fullName>Executive_Id__c</fullName>
    <externalId>true</externalId>
    <label>Executive Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>