force-app/main/default/objects/Executive__c/fields/Executive_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Executive_SAP_Code__c</fullName>
    <externalId>true</externalId>
    <label>Executive SAP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>