force-app/main/default/objects/Executive__c/fields/Executive_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Executive_Vertical__c</fullName>
    <label>Executive Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>