force-app/main/default/objects/Executive__c/fields/Mapped_By__c.field-meta.xml
<CustomField>
    <fullName>Mapped_By__c</fullName>
    <label>Mapped By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>