force-app/main/default/objects/Executive__c/fields/Mapped_On__c.field-meta.xml
<CustomField>
    <fullName>Mapped_On__c</fullName>
    <label>Mapped On</label>
    <type>DateTime</type>
</CustomField>