force-app/main/default/objects/Executive__c/fields/unique_code__c.field-meta.xml
<CustomField>
    <fullName>unique_code__c</fullName>
    <label>unique code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>